apps/rauthy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rauthy
spec:
  selector:
    app: rauthy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
